# livinglink

./: .gitignore  README.md  pyproject.toml
docs/: INCIDENT_RESPONSE.md  PRIVACY.md  RELATIONSHIP_MODEL.md  REQUIREMENTS.md  ROADMAP.md  SAFETY_ARCHITECTURE.md
livinglink/: __init__.py
livinglink/app/: main.py
livinglink/care/: __init__.py  contacts.py  escalation.py  notifications.py
livinglink/core/: config.py  event_bus.py  events.py  executor.py
livinglink/providers/llm/: base.py  mock.py
livinglink/providers/stt/: base.py  mock.py
livinglink/providers/tts/: base.py  mock.py
livinglink/safety/: capabilities.py  policy_gate.py  schema_validation.py
livinglink/ui/: window.py
tests/: test_care_escalation.py  test_contacts.py  test_escalation_safety.py  test_event_bus.py  test_integration.py  test_notifications.py  test_policy_gate.py  test_ui_states.py
